Add logging and enhance assessment commands for data issues; update templates for council links

--- a/council_finance/templates/council_finance/data_issues_table_enhanced.html
+++ b/council_finance/templates/council_finance/data_issues_table_enhanced.html
@@ -44,7 +44,11 @@
         <td class="px-6 py-4 whitespace-nowrap">
           <div class="flex items-center">
             <div>
-              <div class="text-sm font-medium text-gray-900">{{ item.council.name }}</div>
+              <div class="text-sm font-medium text-gray-900">
+                <a href="{% url 'council_detail' item.council.slug %}" class="text-blue-600 hover:text-blue-800 hover:underline">
+                  {{ item.council.name }}
+                </a>
+              </div>
               <div class="text-sm text-gray-500">{{ item.council.council_type.name|default:"" }}</div>
             </div>
           </div>
