--- a/council_finance/templates/council_finance/contribute_data_table.html
+++ b/council_finance/templates/council_finance/contribute_data_table.html
@@ -33,7 +33,11 @@
     {% for item in page_obj %}
     <tr class="hover:bg-gray-50">
       <td class="px-6 py-4 whitespace-nowrap">
-        <div class="text-sm font-medium text-gray-900">{{ item.council.name }}</div>
+        <div class="text-sm font-medium text-gray-900">
+          <a href="{% url 'council_detail' item.council.slug %}" class="text-blue-600 hover:text-blue-800 hover:underline">
+            {{ item.council.name }}
+          </a>
+        </div>
         <div class="text-sm text-gray-500">{{ item.council.council_type.name|default:"No type" }}</div>
       </td>
       <td class="px-6 py-4">
