--- a/council_finance/templates/council_finance/council_detail.html
+++ b/council_finance/templates/council_finance/council_detail.html
@@ -58,6 +58,42 @@
     <a href="{% url 'council_change_log' council.slug %}" class="py-2 px-4 border-b-2 {% if tab == 'log' %}border-blue-600 font-semibold{% else %}border-transparent{% endif %}">Log</a>
   </nav>
 </div>
+
+<!-- Administrative Messages -->
+{% if administrative_messages %}
+  {% for message in administrative_messages %}
+    <div class="mb-4 p-4 rounded-lg border-l-4 
+      {% if message.type == 'merge' %}bg-blue-50 border-blue-400 text-blue-800
+      {% elif message.type == 'flag' %}bg-yellow-50 border-yellow-400 text-yellow-800
+      {% elif message.type == 'defunct' %}bg-red-50 border-red-400 text-red-800
+      {% else %}bg-gray-50 border-gray-400 text-gray-800{% endif %}">
+      <div class="flex items-start">
+        <div class="flex-shrink-0 mr-3">
+          {% if message.type == 'merge' %}
+            <svg class="w-5 h-5 mt-0.5" fill="currentColor" viewBox="0 0 20 20">
+              <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd"/>
+            </svg>
+          {% elif message.type == 'flag' %}
+            <svg class="w-5 h-5 mt-0.5" fill="currentColor" viewBox="0 0 20 20">
+              <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z" clip-rule="evenodd"/>
+            </svg>
+          {% elif message.type == 'defunct' %}
+            <svg class="w-5 h-5 mt-0.5" fill="currentColor" viewBox="0 0 20 20">
+              <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd"/>
+            </svg>
+          {% endif %}
+        </div>
+        <div class="flex-1">
+          <p class="text-sm font-medium">{{ message.message }}</p>
+          {% if message.timestamp %}
+            <p class="text-xs opacity-75 mt-1">{{ message.timestamp|date:"F j, Y \a\t g:i A" }}</p>
+          {% endif %}
+        </div>
+      </div>
+    </div>
+  {% endfor %}
+{% endif %}
+
 {% if tab == 'edit' %}
 <p class="bg-yellow-100 border border-yellow-300 text-yellow-800 p-4 rounded mb-4">
   You can contribute to our dataset by providing information about councils. Most information comes from the council's balance sheet, cash flow statement, outturn data, spending disclosures, and their comprehensive income and expenditure statement.
